# VoxelLoader

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
Include/: chunk.h  meshGeneration.h  model.h  utils.h  volume.h  vxlMesh.h  vxlModel.h
Resources/: A.vox  Pyramid.vox  TestShape.vox  TestShape2.vox
Resources/shaders/: litShader.frag  litShader_web.frag  litShader_web.vert  test.frag
Resources/shaders/web/: litShader_web.frag
Src/: chunk.cpp  main.cpp  meshGeneration.cpp  model.cpp  template.html  volume.cpp  vxlMesh.cpp  vxlModel.cpp
